--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Askhal Thapa. All rights reserved.</p>
+        <p>&copy; 2025 Askal Thapa. All rights reserved.</p>
     </footer>
 </footer>
 
