--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Askhal Thapa's Learning Journal - About Me</title>
+    <title>Askal Thapa's Learning Journal - About Me</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
 
     <main>
         <section class="about-me">
-            <h1>Askhal Thapa - Student Profile</h1>
+            <h1>Askal Thapa - Student Profile</h1>
             
             <article class="introduction fade-in">
                 <h2>Introduction & Background</h2>
@@ -55,7 +55,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Askhal Thapa. All rights reserved.</p>
+        <p>&copy; 2025 Askal Thapa. All rights reserved.</p>
     </footer>
 </footer>
 
