--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Askhal Thapa's Learning Journal - Home</title>
+    <title>Askal Thapa's Learning Journal - Home</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -12,12 +12,12 @@
 
     <main>
         <section class="hero fade-in">
-            <h1 style="margin-bottom: 10px;">Askhal Thapa</h1>
+            <h1 style="margin-bottom: 10px;">Askal Thapa</h1>
             <p class="subtitle" style="text-align: center; color: var(--text-secondary); font-size: 1.2rem; margin-bottom: 10px;">BSc Computer Science Student</p>
             <p style="text-align: center; color: var(--text-secondary); font-style: italic; opacity: 0.8;">University for the Creative Arts, London</p>
             
             <div class="profile-image" style="text-align: center; margin: 30px 0;">
-                <img src="images/profile.jpg" alt="Askhal Thapa Profile Picture" style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover; border: 4px solid var(--accent-primary); padding: 4px; background: var(--bg-surface);">
+                <img src="images/profile.png" alt="Askal Thapa Profile Picture" style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover; border: 4px solid var(--accent-primary); padding: 4px; background: var(--bg-surface);">
             </div>
         </section>
 
