--- a/journal.html
+++ b/journal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Askhal Thapa's Learning Journal - Weekly Entries</title>
+    <title>Askal Thapa's Learning Journal - Weekly Entries</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -110,7 +110,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Askhal Thapa. All rights reserved.</p>
+        <p>&copy; 2025 Askal Thapa. All rights reserved.</p>
     </footer>
 
     <script src="js/browser.js"></script>
