--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Askhal Thapa's Learning Journal - Projects</title>
+    <title>Askal Thapa's Learning Journal - Projects</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Askhal Thapa. All rights reserved.</p>
+        <p>&copy; 2025 Askal Thapa. All rights reserved.</p>
     </footer>
 </footer>
 
