--- a/about.html
+++ b/about.html
@@ -45,10 +45,10 @@
                 </ul>
             
                 <h3>University</h3>
-                <p>I currently study at the <b>University for the Creative Arts in London</b>, where I'm developing both technical skills and creative problem-solving abilities. The program combines theoretical computer science concepts with practical application development.</p>
+                <p>I currently study at the <b>University for the Creative Arts in Farnham</b>, where I'm developing both technical skills and creative problem-solving abilities. The program combines theoretical computer science concepts with practical application development.</p>
                 
                 <div class="about-map" style="margin-top: 20px;">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d298785.5160417382!2d-0.6435588367151758!3d51.335910565174004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4875e216dc279ea3%3A0xec971c98100205e8!2sUniversity%20for%20the%20Creative%20Arts!5e0!3m2!1sen!2snp!4v1762237259066!5m2!1sen!2snp" width="600" height="450" style="border:0;max-width:100%;height:350px;border-radius:15px;box-shadow: 0 10px 25px var(--shadow-card);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d77923.01367721712!2d-0.880581980954862!3d51.220386944706696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48742dad1cfba769%3A0x78f847b79c623abe!2sUniversity%20for%20the%20Creative%20Arts!5e0!3m2!1sen!2snp!4v1762449181184!5m2!1sen!2snp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </article>
         </section>
