--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="hero fade-in">
             <h1 style="margin-bottom: 10px;">Askal Thapa</h1>
             <p class="subtitle" style="text-align: center; color: var(--text-secondary); font-size: 1.2rem; margin-bottom: 10px;">BSc Computer Science Student</p>
-            <p style="text-align: center; color: var(--text-secondary); font-style: italic; opacity: 0.8;">University for the Creative Arts, London</p>
+            <p style="text-align: center; color: var(--text-secondary); font-style: italic; opacity: 0.8;">University for the Creative Arts, Farnham</p>
             
             <div class="profile-image" style="text-align: center; margin: 30px 0;">
                 <img src="images/profile.png" alt="Askal Thapa Profile Picture" style="width: 180px; height: 180px; border-radius: 50%; object-fit: cover; border: 4px solid var(--accent-primary); padding: 4px; background: var(--bg-surface);">
