--- a/journal.html
+++ b/journal.html
@@ -29,7 +29,7 @@
             </div>
 
             <article class="week-entry fade-in" style="animation-delay: 0.1s;">
-                <h2>Week 2: Frontend Fundamentals (HTML/CSS)<span class="reading-time">3 min read</span></h2>
+                <h2>Week 2: Frontend Fundamentals (HTML/CSS)</h2>
                 <p style="font-style: italic; color: var(--text-secondary);">Posted: October 27, 2025</p>
                 
                 <!-- Progress Bar -->
@@ -56,7 +56,7 @@
             </article>
 
             <article class="week-entry fade-in" style="animation-delay: 0.2s;">
-                <h2>Week 3: JavaScript Basics & Theme Toggle<span class="reading-time">4 min read</span></h2>
+                <h2>Week 3: JavaScript Basics & Theme Toggle</h2>
                 <p style="font-style: italic; color: var(--text-secondary);">Posted: November 2, 2025</p>
 
                 <!-- Progress Bar -->
@@ -83,7 +83,7 @@
             </article>
 
             <article class="week-entry fade-in" style="animation-delay: 0.3s;">
-                <h2>Week 4: Advanced JavaScript & PWA Features<span class="reading-time">5 min read</span></h2>
+                <h2>Week 4: Advanced JavaScript & PWA Features</h2>
                 <p style="font-style: italic; color: var(--text-secondary);">Posted: November 9, 2025</p>
 
                 <!-- Progress Bar -->
